Improvements on the Database class, this hopefully fixes all SQLite locking whoes we were suffering from so far. Removed unnecessary transaction use from special PHP task, PhpDepend. Visually aligned the loading indicators on the dashboard. Small change to the README.

--- a/www/css/cintient.css
+++ b/www/css/cintient.css
@@ -530,6 +530,12 @@ user-select: none;
   float: left;
 }
 
+#dashboardProject .loading
+{
+  /* Align this loading indicator with the one of the first project on the list at the left */
+  margin-top: 18px;
+}
+
 /* @end */
 
 /* @group Project build history */
